Updated the link design pattern.

--- a/examples/link/css/basic.css
+++ b/examples/link/css/basic.css
@@ -59,3 +59,13 @@ img
     border: none;
 }
 
+code
+{
+    font: bold "Courier new", Courier, Monospace;
+}
+
+#example
+{
+    margin-top: 1em;
+    margin-bottom: 2em;
+}
