Added click event to the slider to move the slider
Clicking the mouse near the rail will move the slider to that position

--- a/examples/slider/css/slider.css
+++ b/examples/slider/css/slider.css
@@ -1,6 +1,8 @@
 /* CSS Document */
 
 div.aria-widget-slider {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
   height: 4em;
 }
 
@@ -9,6 +11,8 @@ div.aria-widget-slider .rail {
   padding: 0;
   background-color: #eee;
   border: 1px solid #888;
+  position: relative;
+  top: 2em;
 }
 
 div.aria-widget-slider .thumb  {
