--- a/examples/slider/css/slider.css
+++ b/examples/slider/css/slider.css
@@ -28,3 +28,14 @@ div.aria-widget-slider .value  {
   text-align: right;
   position: absolute;
 }
+
+div.focus .thumb  {
+  border: 1px solid #444;
+  background-color: #888;
+  position: relative;
+}
+
+div.focus .rail {
+  background-color: #CCC;
+}
+
