--- a/examples/checkbox/css/checkbox-1.css
+++ b/examples/checkbox/css/checkbox-1.css
@@ -15,3 +15,8 @@ div[role=checkbox]:hover {
 div[role=checkbox].focus {
    border-color: black;
 }
+#example{
+   background-color: #F1F1F1 ;
+   padding:5px;
+}
+
