--- a/examples/landmarks/css/common.css
+++ b/examples/landmarks/css/common.css
@@ -54,7 +54,8 @@ main ul {
     margin-bottom: 1em;
 }
 
-main li {
+main li,
+aside li {
     padding-bottom: 0.25em;
 }
 
@@ -91,6 +92,7 @@ main .nav-tabs > li > a {
 
 nav {
     margin: 0;
+    margin-bottom: 1em;
 }
 
 nav li {
@@ -139,16 +141,18 @@ aside ul {
     margin-bottom: 0.5em;
 }
 
-aside .inst {
-    margin-top: 2em;
+header .inst {
+    margin: 0;
+    padding: 0;
     font-size: 90%;
     font-style: italic;
 }
 
-aside button {
+header button {
+    margin: 0;
     text-align: center;
     margin: 0.25em;
-    width: 95%;
+    margin-left: -.125em;
 }
 
 aside .note {
@@ -164,4 +168,9 @@ a:hover {
 .code {
   font-family: courier, monosapce;
   background: #F0F0F0;
+}
+
+form {
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
