updated tree view example and css

--- a/examples/css/core.css
+++ b/examples/css/core.css
@@ -58,6 +58,10 @@ img {
   border: none;
 }
 
+td ul li {
+  margin-left: 1em;
+}
+
 code {
   font-family: "Courier new", Courier, Monospace;
   font-weight: bold;
