--- a/examples/accordion/css/customize.css
+++ b/examples/accordion/css/customize.css
@@ -1,3 +1,4 @@
+/* Accordion Header */
 
 #accordionGroup dt {
 	position: relative;
@@ -6,13 +7,15 @@
 	padding: 0.3em 0.5em;
 	margin-bottom: 1px;
 }
+
+/* Accordion Panel */
+
 #accordionGroup dd {
 	text-align: center;
 	background: #FFF;
 }
-#accordionGroup dd img {width: 150px; vertical-align: middle;}
-	
-#accordionGroup div.content {padding: 1rem;}
+
+/* Image Sprite for the expanded/collapse icon */
 
 .accAccordion, a.accAccordion:link, a.accAccordion:visited {
 	display: block;
@@ -31,18 +34,7 @@
     background-position: right -119px;
 }
 
-/* --- DEMO BLOCK --- */
-
-div.demo-block {
-	clear: both;
-	padding: 1rem 0;
-	margin-bottom: 2rem;
-	border-top: 2px dotted #63B7C2;
-	border-bottom: 2px dotted #63B7C2;
-}
-	
-div.demo-block h3 {margin: 0 0 0.5em;}
-	
+  
 .hidden {display: none;}
 
 fieldset.flex p {
@@ -55,21 +47,6 @@ fieldset.flex > p  > label
 {flex: 1 0 120px;
   max-width: 220px;}
   
-/* --------------------------------------------------------------------------- */
-/* ---------------------------------- QUERIES -------------------------------- */
-/* --------------------------------------------------------------------------- */
-
-
-@media screen and (min-width: 400px) {
-	.keyboard {padding: 0 0 0 80px;}
-	.keyboard p {padding: 1rem 0 0;}
-}
-
-
-@media screen and (min-width: 1200px) {
-	div.demo-block {width: 55%;}
-}
-
 *:focus {
 	color: #000;
 	background: #FC0;
