--- a/examples/menubar/menubar-1/css/menubarLinks.css
+++ b/examples/menubar/menubar-1/css/menubarLinks.css
@@ -48,6 +48,7 @@ ul[role="menubar"] > li > a:after {
   content: url('../images/pull-down-menu-icon.png');
 }
 
+
 ul[role="menubar"] ul[role="menu"] {
   display: none;
   position: absolute;
@@ -60,4 +61,8 @@ ul[role="menubar"] ul[role="menu"] {
 
 ul[role="menubar"] ul[role="menu"] li a {
   display: block;
+}
+
+ul[role="menubar"] ul[role="menu"] a[aria-haspopup="true"]:after {
+  content: " >";
 }
