update tree view examples

--- a/examples/treeview/treeview-1/css/tree-1.css
+++ b/examples/treeview/treeview-1/css/tree-1.css
@@ -42,7 +42,7 @@ ul[role="tree"] {
 }
 
 [role="treeitem"].hover,
-[role="treeitem"] span.hover {
+[role="treeitem"] span:hover {
   background-color: #DDDDDD;
   width: 9em;  
 }
