--- a/examples/listbox/css/listbox.css
+++ b/examples/listbox/css/listbox.css
@@ -53,3 +53,36 @@
 	position: absolute;
 	left: 0.5em;
 }
+
+
+.move-right-btn {
+	padding-right: 15px;
+	position: relative;
+}
+
+.move-right-btn::after {
+	content: ' ';
+	height: 10px;
+	width: 10px;
+	background-image: url('../imgs/Arrows-Right-icon.png');
+	background-position: center right;
+	position: absolute;
+	right: 2px;
+	top: 4px;
+}
+
+.move-left-btn {
+	padding-left: 15px;
+	position: relative;
+}
+
+.move-left-btn::after {
+	content: ' ';
+	height: 10px;
+	width: 10px;
+	background-image: url('../imgs/Arrows-Left-icon.png');
+	background-position: center left;
+	position: absolute;
+	left: 2px;
+	top: 4px;
+}
