--- a/examples/checkbox/checkbox-2/css/checkboxMixed.css
+++ b/examples/checkbox/checkbox-2/css/checkboxMixed.css
@@ -9,7 +9,6 @@ ul.checkboxes li {
    padding: 0.25em;
 }
 
-
 [role='checkbox'] {
    margin: 0;
    padding: 0.25em;
@@ -17,6 +16,13 @@ ul.checkboxes li {
    border: 2px transparent solid;
    width: 12em;
 }
+ul.checkboxes label {
+   margin: 0;
+   padding: 0.25em;
+   border: 2px transparent solid;
+   width: 12em;
+}
+
 
 [role='checkbox'][aria-checked='false']:before{
    content: url('../images/checkbox-unchecked.png');
@@ -32,10 +38,19 @@ ul.checkboxes li {
    left: -0.25em;
 }
 
+[role='checkbox'][aria-checked='mixed']:before{
+   content: url('../images/checkbox-mixed.png');
+   position: relative;
+   top: 2px;
+   left: -0.25em;
+}
+
+ul.checkboxes label:hover,
 [role='checkbox']:hover {
    background-color: #DDDDDD;
 }
 
+ul.checkboxes label.focus,
 [role='checkbox'].focus {
    border-color: black;
    background-color: #EEEEEE;
