Comment the separator style. The images directory does not exist and there doesn’t seem to be a separator in this example.

--- a/examples/menu-button/menu-button-1/css/menuButtonAction.css
+++ b/examples/menu-button/menu-button-1/css/menuButtonAction.css
@@ -28,12 +28,14 @@ ul[role="menu"] li[role="menuitem"]{
 }
 
 
+/*
 ul[role="menu"] li[role="separator"]{
   padding-top: 0.15em;
   background-image: url('../images/separator.png');
   background-position: center;
   background-repeat: repeat-x;
 }
+ */
 
 /* focus and hover styling */
 
