--- a/examples/landmarks/css/bootstrap.css
+++ b/examples/landmarks/css/bootstrap.css
@@ -264,6 +264,7 @@ th {
     border: 1px solid #ddd !important;
   }
 }
+/*
 @font-face {
   font-family: 'Glyphicons Halflings';
 
@@ -1057,6 +1058,7 @@ th {
 .glyphicon-menu-up:before {
   content: "\e260";
 }
+ */
 * {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
