--- a/examples/hide-show/hide-show-1/css/hideShow1.css
+++ b/examples/hide-show/hide-show-1/css/hideShow1.css
@@ -1,12 +1,3 @@
-[role="button"] {
-  display: inline-block;
-  padding: 5px 10px;
-  border: 2px solid #555;
-  border-radius: 5px;
-  color: #000;
-  background: #ddd;
-}
-
 [role="button"]:hover,
 [role="button"]:focus {
   background-color: #eee;
@@ -17,7 +8,10 @@
   background-color: #bbb;
 }
 
-[role="button"][aria-pressed="true"] {
-  color: #fff;
-  background: #333;
+[role="button"][aria-expanded="false"]:before {
+  content: url('../images/collapsed-16.png');
+}
+
+[role="button"][aria-expanded="true"]:before {
+  content: url('../images/expanded-16.png');
 }
