updated JS for hide show

--- a/examples/hide-show/hide-show-1/css/hideShow1.css
+++ b/examples/hide-show/hide-show-1/css/hideShow1.css
@@ -9,9 +9,9 @@
 }
 
 [role="button"][aria-expanded="false"]:before {
-  content: url('../images/collapsed-16.png');
+  content: "+";
 }
 
 [role="button"][aria-expanded="true"]:before {
-  content: url('../images/expanded-16.png');
+  content: "-";
 }
