--- a/examples/link/css/link.css
+++ b/examples/link/css/link.css
@@ -1,34 +1,22 @@
-[role="link"]
-{
-    color: #009;
-    background: transparent;
-    text-decoration: underline;
-    border: thin solid transparent;
+[role="link"] {
+  color: #009;
+  background: transparent;
+  text-decoration: underline;
 }
 
-[role="link"]:hover, [role="link"]:focus, [role="link"]:active
-{
-    color:#000;
-    border-color: #fc0;
-    cursor: pointer;
+[role="link"]:hover,
+[role="link"]:focus,
+[role="link"]:hover::before,
+[role="link"]:focus::before {
+  color:#000;
+  cursor: pointer;
+  outline: .2em solid hsl(219, 63%, 44%);
+  outline-offset: .2em;
 }
 
-[role="link"].link3:before {
+[role="link"].link3::before {
   display: block;
   content: url('../images/w3c-logo.png');
   width:153px;
-  height:104px; 
-}
-
-[role="link"].link4 {
-  display: block;
-  background-repeat: no-repeat;
-  background-image: url('../images/w3c-logo.png');
-  width:153px;
-  height:104px; 
-}
-
-td div {
-  margin-bottom: 0.25em;
-  font-weight: bold;
+  height:104px;
 }
