--- a/examples/menubar/menubar-2/css/menubarAction.css
+++ b/examples/menubar/menubar-2/css/menubarAction.css
@@ -17,6 +17,11 @@ ul[role="menubar"] > li {
   position: relative;
 }
 
+ul[role="menubar"] > li > span:after {
+  content: url('../images/down-arrow-brown.png');
+  padding-left: 0.25em;
+}
+
 ul[role="menubar"] ul[role="menu"] {
   display: none;
   position: absolute;
@@ -50,6 +55,7 @@ ul[role="menubar"] ul li[role="menuitemcheckbox"],
 ul[role="menubar"] ul li[role="menuitemradio"], 
 ul[role="menubar"] ul li[role="separator"] {
   padding-left: 1.5em;
+  width: 8em;
 }  
 
 
@@ -75,28 +81,14 @@ ul[role="menubar"] [role="menu"] [role="separator"]:hover {
 
 ul[role="menubar"] [role="menuitemcheckbox"][aria-checked='true'],
 ul[role="menubar"] [role="menuitemradio"][aria-checked='true'] {
-  background-image: url('../images/checkmark.png');
-  background-repeat: no-repeat;
-  background-position: 0.1em 0.2em;
+  padding-left: 0.5em;
 }
 
-
-ul[role="menubar"] li[aria-checked='true']:hover,
-ul[role="menubar"] li[aria-checked='true']:focus {
-  background-image: url('../images/checkmark-inverse.png');
-  background-repeat: no-repeat;
-  background-position: 0.1em 0.2em;
+ul[role="menubar"] [role="menuitemcheckbox"][aria-checked='true']:before,
+ul[role="menubar"] [role="menuitemradio"][aria-checked='true']:before {
+  content: url('../images/check-brown.png');
+  padding-right: 0.25em;
 }
-
-
-ul[role="menubar"] ul[role="menuitem"] > span:after {
-/*  content: url('../images/pull-down-menu-icon.png'); */
-  content: " \25bc";
-  font-size: 80%;
-  color: gray;
-}
-
-
 
 
 
